<resources>
    <string name="app_name">SportAgenda</string>
    <string name="action_new_event">New event</string>
    <string name="sport">Sport:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="local">Local:</string>
    <string name="participants">Nº of Participants</string>
    <string name="email_subject">SportAgenda event</string>
    <string name="date_format">dd/MM/yy</string>
    <string name="time_format">H:mm</string>
    <string name="db_events">events</string>
    <string name="db_sports">sports</string>
    <string name="db_date">date</string>
    <string name="db_time">time</string>
    <string name="db_local">local</string>
    <string name="db_participants">participants</string>
    <string name="auth_failed">Error trying to sign in</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="log_out">Log out</string>
    <string name="next_event">Next event</string>
    <string name="db_date_in_milliseconds">milliseconds</string>
    <string name="service_name">EventService</string>
    <string name="service_name_background">EventServiceBackground</string>
    <string name="event">event</string>
    <string name="eventKey">eventKey</string>
    <string name="event_deleted">Event deleted!</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="empty_field_error">Please fill in the empty fields</string>
    <string name="default_local_value">To be defined</string>
    <string name="default_participants_value">No limit</string>
    <string name="no_internet_connection">Please turn in an internet connection</string>
    <string name="event_sport_icon">Event sport icon</string>
    <string name="email_content"><![CDATA[
                <h1 style="color: #5e9ca0;">SportAgenda <span style="color: #2b2301;">
                <p>Hello Sportsman. I would like to invite you to participate in my event.<p>
                <h4 style="color: #2e6c80;">Event details:</h4>
                <ol style="list-style: none; font-size: 14px; line-height: 32px; font-weight: bold;">
                <li style="clear: both;">Sport:  %s </li>
                <li style="clear: both;">Date:  %s </li>
                <li style="clear: both;">Time:  %s </li>
                <li style="clear: both;">Local:  %s</li>
                <li style="clear: both;">Nº of Participants: %s </li>
               </ol>
    ]]></string>
</resources>
