<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEditEvent">

    <TextView
        android:id="@+id/sport_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:text="@string/sport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sport_input_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/edge_margin"
        app:layout_constraintBottom_toBottomOf="@+id/sport_label_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sport_label_tv"
        app:layout_constraintTop_toTopOf="@+id/sport_label_tv" />

    <TextView
        android:id="@+id/date_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_item_margin"
        android:padding="@dimen/text_padding"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/sport_label_tv"
        app:layout_constraintTop_toBottomOf="@+id/sport_label_tv" />

    <EditText
        android:id="@+id/date_input_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="date"
        android:layout_marginEnd="@dimen/edge_margin"
        app:layout_constraintBottom_toBottomOf="@+id/date_label_tv"
        app:layout_constraintEnd_toStartOf="@+id/time_label_tv"
        app:layout_constraintStart_toEndOf="@+id/date_label_tv"
        app:layout_constraintTop_toTopOf="@+id/date_label_tv" />

    <TextView
        android:id="@+id/time_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/date_input_et"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/date_input_et" />

    <EditText
        android:id="@+id/time_input_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/edge_margin"
        android:focusable="false"
        android:inputType="datetime"
        app:layout_constraintBottom_toBottomOf="@+id/time_label_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_label_tv"
        app:layout_constraintTop_toTopOf="@+id/time_label_tv" />

    <TextView
        android:id="@+id/local_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_item_margin"
        android:padding="@dimen/text_padding"
        android:text="@string/local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_label_tv" />

    <EditText
        android:id="@+id/local_input_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/edge_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/local_label_tv"
        app:layout_constraintTop_toTopOf="@+id/local_label_tv" />

    <TextView
        android:id="@+id/participants_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inter_item_margin"
        android:padding="@dimen/text_padding"
        android:text="@string/participants"
        app:layout_constraintStart_toStartOf="@+id/local_label_tv"
        app:layout_constraintTop_toBottomOf="@+id/local_label_tv" />

    <EditText
        android:id="@+id/participants_input_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/edge_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/participants_label_tv"
        app:layout_constraintTop_toTopOf="@+id/participants_label_tv" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/done_fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/edge_margin"
        android:layout_marginEnd="@dimen/edge_margin"
        android:layout_marginStart="@dimen/edge_margin"
        android:contentDescription="@string/action_new_event"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_baseline_done_24px"
        app:backgroundTint="@color/colorAccent"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>